yaml/is-prime-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: is-prime
  namespace: ns1
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/backend-protocol: "https"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - aks.onefoursix.com
    secretName: streamsets-tls
  rules:
  - host: aks.onefoursix.com
    http:
      paths:
      - path: /is-prime(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: is-prime
            port: 
              number: 8000
